--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "tsc -p ./tsconfig.json",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@mds-coding/database-criteria": "^1.1.0"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
